--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,10 @@
 */bin/
 /.metadata/
 /.swp
-*/.settings
+*.settings
 .factorypath
 .idea/
 *.iml
-.project
-.classpath
 */nimbus-ui-app/node
 */nimbus-ui-app/node_modules
 */nimbus-ui-app/dist
@@ -22,3 +20,5 @@
 /nimbus-ui-app/etc
 /nimbus-ui-app/node
 /nimbus-ui-app/node_modules
+*.project
+*.classpath
