--- a/nimbus-parent/pom.xml
+++ b/nimbus-parent/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.antheminc.oss</groupId>
 	<artifactId>nimbus-parent</artifactId>
-	<version>1.0.0.M1-SNAPSHOT</version>
+	<version>1.0.0.M111-SNAPSHOT</version>
 	<name>nimbus-parent</name>
 	<packaging>pom</packaging>
    
@@ -69,7 +69,7 @@
         <nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
         <!-- nimbus-core -->
        	<parentDir>../nimbus-parent</parentDir>
-        <nimbus.version>1.0.0.M1-SNAPSHOT</nimbus.version>
+        <nimbus.version>1.0.0.M111-SNAPSHOT</nimbus.version>
         <nimbus.core.version>${nimbus.version}</nimbus.core.version>
         <nimbus.ui.version>${nimbus.version}</nimbus.ui.version>
         <nimbus.dsl.version>${nimbus.core.version}</nimbus.dsl.version> <!-- DSL matches core's version -->
@@ -180,6 +180,12 @@
                 <version>${embed-mongo.version}</version>
                 <scope>test</scope>
             </dependency>
+            	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+			<dependency>
+		    		<groupId>com.fasterxml.jackson.datatype</groupId>
+		    		<artifactId>jackson-datatype-jsr310</artifactId>
+		    		<version>2.9.4</version>
+			</dependency>
             <dependency>
 			    <groupId>cz.jirutka.spring</groupId>
 			    <artifactId>embedmongo-spring</artifactId>
