Add base pom.xml moved from nimbus-parent directory. Move nimbus-parent/post pom.xml into separate module nimbus-entity-dsl. Drop nimbus-parent directory. Update build-projects.sh according to the changes.

--- a/nimbus-entity-dsl/pom.xml
+++ b/nimbus-entity-dsl/pom.xml
@@ -5,7 +5,6 @@
 		<groupId>com.antheminc.oss</groupId>
 		<artifactId>nimbus-parent</artifactId>
 		<version>1.0.0.M1-SNAPSHOT</version>
-		<relativePath>../</relativePath>
 	</parent>
 
 	<artifactId>nimbus-entity-dsl</artifactId> 
@@ -24,8 +23,8 @@
     </dependencies>
 
 	<build>
-		 <sourceDirectory>../../nimbus-core/target/generated-sources/annotations</sourceDirectory>
-		 <directory>../../nimbus-core/target/nimbus-entity-dsl</directory>
+		 <sourceDirectory>../nimbus-core/target/generated-sources/annotations</sourceDirectory>
+		 <directory>../nimbus-core/target/nimbus-entity-dsl</directory>
 	</build>
 
 </project>
