--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.antheminc.oss</groupId>
-	<artifactId>nimbus-parent</artifactId>
-	<version>1.0.0.M1-SNAPSHOT</version>
-	<name>nimbus-parent</name>
-	<packaging>pom</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.antheminc.oss</groupId>
+    <artifactId>nimbus-parent</artifactId>
+    <version>1.0.0.M1-SNAPSHOT</version>
+    <name>nimbus-parent</name>
+    <packaging>pom</packaging>
     <description>Nimbus Core Bill of materials</description>
     <organization>
         <name>Anthem Inc.</name>
@@ -19,7 +20,7 @@
         <module>nimbus-extn-activiti</module>
     </modules>
 
-	<properties>
+    <properties>
         <docker.image.prefix>nimbus</docker.image.prefix>
         <docker.plugin.version>0.3.258</docker.plugin.version>
         <spring.boot.maven.version>1.4.0.RELEASE</spring.boot.maven.version>
@@ -195,11 +196,11 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-			    <groupId>cz.jirutka.spring</groupId>
-			    <artifactId>embedmongo-spring</artifactId>
-			    <version>1.3.1</version>
-			    <scope>test</scope>
-			</dependency>
+                <groupId>cz.jirutka.spring</groupId>
+                <artifactId>embedmongo-spring</artifactId>
+                <version>1.3.1</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>redis.embedded</groupId>
                 <artifactId>embedded-redis</artifactId>
@@ -323,30 +324,30 @@
                 <groupId>com.antheminc.oss</groupId>
                 <artifactId>nimbus-entity-dsl</artifactId>
                 <version>${nimbus.dsl.version}</version>
-            </dependency>            
+            </dependency>
             <dependency>
                 <groupId>com.antheminc.oss</groupId>
                 <artifactId>nimbus-test</artifactId>
                 <version>${nimbus.test.version}</version>
-                <scope>test</scope> 
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
-    	<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-        	<groupId>org.springframework.boot</groupId>
-        	<artifactId>spring-boot-starter-web</artifactId>
-    	</dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
@@ -363,7 +364,7 @@
             <groupId>org.drools</groupId>
             <artifactId>drools-core</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>org.drools</groupId>
             <artifactId>drools-compiler</artifactId>
@@ -375,14 +376,14 @@
             </exclusions>
         </dependency>
         <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web-services</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.activiti</groupId>
-			<artifactId>activiti-spring-boot-starter-basic</artifactId>
-		</dependency>
-		
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web-services</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-spring-boot-starter-basic</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
@@ -394,7 +395,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            
+
         </dependency>
         <!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-devtools</artifactId>
 			</dependency> -->
@@ -421,42 +422,36 @@
             <artifactId>netty-all</artifactId>
             <!-- <scope>test</scope> -->
         </dependency>
-		<dependency>
-			<groupId>de.flapdoodle.embed</groupId>
-			<artifactId>de.flapdoodle.embed.mongo</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-		    <groupId>cz.jirutka.spring</groupId>
-		    <artifactId>embedmongo-spring</artifactId>
-		    <scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.assertj</groupId>
-			<artifactId>assertj-core</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<scope>test</scope>
-		</dependency>		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>	
-		        
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>cz.jirutka.spring</groupId>
+            <artifactId>embedmongo-spring</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!-- Querydsl -->
         <dependency>
             <groupId>com.querydsl</groupId>
@@ -475,12 +470,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
-		<dependency>
-			<groupId>org.owasp.esapi</groupId>
-    		<artifactId>esapi</artifactId>
-		</dependency>
-						
-    </dependencies>	
+        <dependency>
+            <groupId>org.owasp.esapi</groupId>
+            <artifactId>esapi</artifactId>
+        </dependency>
+
+    </dependencies>
 
     <distributionManagement>
         <snapshotRepository>
@@ -628,12 +623,11 @@
                     </configuration>
                 </plugin>
 
-
-                <!-- <plugin>
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
-                </plugin> -->
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
@@ -793,30 +787,30 @@
                     </archive>
                 </configuration>
             </plugin>
-           <!--  <plugin>
-			    <groupId>com.mycila</groupId>
-			    <artifactId>license-maven-plugin</artifactId>
-			    <version>3.0</version>
-			    <configuration>
-			        <header>${parentDir}/license.txt</header>
-			        <properties>
-			            <inceptionYear>2016</inceptionYear>
-			            <currentYear>2018</currentYear>
-			        </properties>
-			        <includes>
-				       <include>src/main/java/**</include>
-				       <include>src/test/java/**</include>
-				      </includes>
-			    </configuration>
-			    <executions>
-			        <execution>
-			            <goals>
-			                <goal>format</goal>
-			            </goals>
-			            <phase>process-sources</phase>
-			        </execution>
-			    </executions>
-			</plugin> -->
+            <!--  <plugin>
+                 <groupId>com.mycila</groupId>
+                 <artifactId>license-maven-plugin</artifactId>
+                 <version>3.0</version>
+                 <configuration>
+                     <header>${parentDir}/license.txt</header>
+                     <properties>
+                         <inceptionYear>2016</inceptionYear>
+                         <currentYear>2018</currentYear>
+                     </properties>
+                     <includes>
+                        <include>src/main/java/**</include>
+                        <include>src/test/java/**</include>
+                       </includes>
+                 </configuration>
+                 <executions>
+                     <execution>
+                         <goals>
+                             <goal>format</goal>
+                         </goals>
+                         <phase>process-sources</phase>
+                     </execution>
+                 </executions>
+             </plugin> -->
         </plugins>
     </build>
     <profiles>
@@ -891,8 +885,8 @@
                                         <requireJavaVersion>
                                             <version>1.8</version>
                                         </requireJavaVersion>
-                                        <requireReleaseDeps />
-                                        <requireReleaseVersion />
+                                        <requireReleaseDeps/>
+                                        <requireReleaseVersion/>
                                     </rules>
                                     <fail>true</fail>
                                 </configuration>
@@ -920,8 +914,8 @@
                                         <requireJavaVersion>
                                             <version>1.8</version>
                                         </requireJavaVersion>
-                                        <requireReleaseDeps />
-                                        <requireReleaseVersion />
+                                        <requireReleaseDeps/>
+                                        <requireReleaseVersion/>
                                     </rules>
                                     <fail>true</fail>
                                 </configuration>
