--- a/nimbus-parent/pom.xml
+++ b/nimbus-parent/pom.xml
@@ -14,7 +14,7 @@
         <docker.plugin.version>0.3.258</docker.plugin.version>
         <spring.boot.maven.version>1.4.0.RELEASE</spring.boot.maven.version>
         <ecj.version>4.5.1</ecj.version>
-        <validation-api.version>2.0.0.Final</validation-api.version>
+        <validation-api.version>1.1.0.Final</validation-api.version>
         <byte-buddy.version>1.4.17</byte-buddy.version>
         <netty.version>4.1.2.Final</netty.version>
         <jjwt.version>0.6.0</jjwt.version>
@@ -328,13 +328,13 @@
                 <artifactId>nimbus-starter</artifactId>
                 <version>${nimbus.starter.version}</version>
             </dependency>
-            <dependency>
+            <!-- <dependency>
 			    <groupId>org.springframework.boot</groupId>
 			    <artifactId>spring-boot-devtools</artifactId>
 			    <optional>true</optional>
 			    <scope>runtime</scope>
 			    <version>${spring.boot.version}</version>
-			</dependency>
+			</dependency> -->
         </dependencies>
     </dependencyManagement>
 
