Add necessary repo for dependency in extn-activiti

--- a/nimbus-parent/pom.xml
+++ b/nimbus-parent/pom.xml
@@ -87,6 +87,10 @@
             <id>clojars.org</id>
             <url>http://clojars.org/repo</url>
         </repository>
+    	<repository>
+            <id>alfresco.com</id>
+	    <url>https://maven.alfresco.com/nexus/content/repositories/activiti/</url>
+	</repository>
     </repositories>
 
     <developers>
