--- a/nimbus-ui/nimbusui/package.json
+++ b/nimbus-ui/nimbusui/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.6",
     "angular-in-memory-web-api": "^0.5.1",
     "bootstrap": "^4.0.0-beta",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
@@ -35,6 +36,7 @@
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.5.2",
     "stompjs": "2.3.3",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
