Removed sonar properties from nimbu-core pom, so their was no overlap

--- a/nimbus-core/pom.xml
+++ b/nimbus-core/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>nimbus-core</artifactId> 
 	
     <properties>
-        <sonar.projectName>nimbus-core</sonar.projectName>
+        <!-- <sonar.projectName>nimbus-core</sonar.projectName> -->
         <!-- <sonar.jacoco.reportPath>${project.basedir}/../platform.parent/target/jacoco.exec</sonar.jacoco.reportPath> -->
     </properties>
 
