--- a/nimbus-core/pom.xml
+++ b/nimbus-core/pom.xml
@@ -36,7 +36,7 @@
 					</execution>
 				</executions>
 			</plugin>  
-		
+		 
 	        <plugin>
 	            <groupId>org.apache.maven.plugins</groupId>
 	            <artifactId>maven-surefire-plugin</artifactId>
@@ -48,6 +48,20 @@
 	                </includes>
 	            </configuration>
 	        </plugin>
+	        <!-- 
+			<plugin>
+			  <groupId>com.github.spotbugs</groupId>
+			  <artifactId>spotbugs-maven-plugin</artifactId>
+			  <version>3.1.3</version>
+			  <dependencies>
+			    <dependency>
+			      <groupId>com.github.spotbugs</groupId>
+			      <artifactId>spotbugs</artifactId>
+			      <version>3.1.3</version>
+			    </dependency>
+			  </dependencies>
+			</plugin>	   
+			 -->     
         </plugins>
     </build>
 </project>
