--- a/nimbus-ui/nimbusui/package.json
+++ b/nimbus-ui/nimbusui/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "mavenbuild": "ng build --prod"
+    "mavenbuild": "ng build"
   },
   "private": true,
   "dependencies": {
@@ -21,19 +21,20 @@
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
     "@angular/platform-server": "^5.2.0",
+    "@angular/router": "^5.2.0",
     "@angular/upgrade": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.6",
     "angular-in-memory-web-api": "^0.5.1",
     "bootstrap": "^4.0.0-beta",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "jsnlog": "^2.26.2",
     "moment": "^2.20.1",
     "popper.js": "^1.12.9",
     "primeng": "^5.2.0",
-    "font-awesome": "^4.7.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.5.6",
     "stompjs": "2.3.3",
