update core with latest

--- a/nimbus-ui/nimbusui/package.json
+++ b/nimbus-ui/nimbusui/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "mavenbuild": "ng build --prod"
+    "mavenbuild": "ng build --prod",
+    "coverage": "ng test --watch=false --code-coverage"
   },
   "private": true,
   "dependencies": {
@@ -21,19 +22,20 @@
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
     "@angular/platform-server": "^5.2.0",
+    "@angular/router": "^5.2.0",
     "@angular/upgrade": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.6",
-    "angular-in-memory-web-api": "^0.5.1",
+    "angular-webstorage-service": "^1.0.2",
     "bootstrap": "^4.0.0-beta",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "jsnlog": "^2.26.2",
     "moment": "^2.20.1",
     "popper.js": "^1.12.9",
     "primeng": "^5.2.0",
-    "font-awesome": "^4.7.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.5.6",
     "stompjs": "2.3.3",
@@ -50,6 +52,7 @@
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "angular-in-memory-web-api": "^0.5.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
