--- a/nimbus-parent/pom.xml
+++ b/nimbus-parent/pom.xml
@@ -343,6 +343,10 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-aop</artifactId>
+    	</dependency>
     	<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
