--- a/nimbus-ui/pom.xml
+++ b/nimbus-ui/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.antheminc.oss</groupId>
 		<artifactId>nimbus-parent</artifactId>
-		<version>1.0.2.M1-SNAPSHOT</version>
+		<version>1.0.2.BUILD-SNAPSHOT</version>
 		<relativePath>../nimbus-parent</relativePath>
 	</parent>
 	
