--- a/nimbus-core/pom.xml
+++ b/nimbus-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.antheminc.oss</groupId>
 		<artifactId>nimbus-parent</artifactId>
-		<version>1.0.3.BUILD-SNAPSHOT</version>
+		<version>1.0.3.RELEASE</version>
 		<relativePath>../nimbus-parent</relativePath>
 	</parent>
 	
