--- a/nimbus-starter/pom.xml
+++ b/nimbus-starter/pom.xml
@@ -5,13 +5,13 @@
 
 	<groupId>com.antheminc.oss</groupId>
 	<artifactId>nimbus-starter</artifactId>
-    <version>1.0.3.BUILD-SNAPSHOT</version>
+    <version>1.0.3.RELEASE</version>
    
 	<name>nimbus-starter</name>
 	<description>framework starter project</description>
 
 	<properties>
-		<nimbus.version>1.0.3.BUILD-SNAPSHOT</nimbus.version>
+		<nimbus.version>1.0.3.RELEASE</nimbus.version>
 	</properties>
 
 	<dependencies>	
