--- a/nimbus-parent/pom.xml
+++ b/nimbus-parent/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.antheminc.oss</groupId>
 	<artifactId>nimbus-parent</artifactId>
-	<version>1.1.3.BUILD-SNAPSHOT</version>
+	<version>1.1.0.M1-SNAPSHOT</version>
 	<name>nimbus-parent</name>
 	<packaging>pom</packaging>
    
