--- a/nimbus-test/pom.xml
+++ b/nimbus-test/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.antheminc.oss</groupId>
 		<artifactId>nimbus-parent</artifactId>
-		<version>1.1.3.BUILD-SNAPSHOT</version>
+		<version>1.1.0.M1-SNAPSHOT</version>
 		<relativePath>../nimbus-parent</relativePath>
 	</parent>
   	
