--- a/nimbus-ui/nimbusui/tsconfig.json
+++ b/nimbus-ui/nimbusui/tsconfig.json
@@ -14,7 +14,9 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "module": "es2015",
+    "baseUrl": "./"
   },
   "angularCompilerOptions": {
     "preserveWhitespaces": false
