--- a/nimbus-parent/pom.xml
+++ b/nimbus-parent/pom.xml
@@ -69,7 +69,7 @@
         <nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
         <!-- nimbus-core -->
        	<parentDir>../nimbus-parent</parentDir>
-        <nimbus.version>1.1.3.BUILD-SNAPSHOT</nimbus.version>
+        <nimbus.version>1.1.0.M1-SNAPSHOT</nimbus.version>
         <nimbus.core.version>${nimbus.version}</nimbus.core.version>
         <nimbus.ui.version>${nimbus.version}</nimbus.ui.version>
         <nimbus.dsl.version>${nimbus.core.version}</nimbus.dsl.version> <!-- DSL matches core's version -->
