NIM-17256: Signature component behaves inconsistently

--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,17 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*/nimbus-ui-app/node
+*/nimbus-ui-app/node_modules
+*/nimbus-ui-app/dist
+*/nimbusui/node
+*/nimbusui/node_modules
+*/nimbusui/dist
+*/nimbusui/etc
+/nimbus-ui-app/dist
+/nimbus-ui-app/etc
+/nimbus-ui-app/node
+/nimbus-ui-app/node_modules 
 
 # Runtime data
 pids
