--- a/nimbus-ui/nimbusui/angular.json
+++ b/nimbus-ui/nimbusui/angular.json
@@ -28,6 +28,7 @@
               "src/styles.scss"
             ],
             "scripts": [
+              "node_modules/chart.js/dist/Chart.js",
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
