--- a/nimbus-ui/nimbusui/package.json
+++ b/nimbus-ui/nimbusui/package.json
@@ -29,6 +29,7 @@
     "angular-svg-icon": "^5.1.1",
     "angular-webstorage-service": "^1.0.2",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.2",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.7",
     "font-awesome": "^4.7.0",
