--- a/nimbus-ui/nimbusui/angular.json
+++ b/nimbus-ui/nimbusui/angular.json
@@ -26,7 +26,7 @@
               "node_modules/primeng/resources/themes/omega/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.scss",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/nimbus-sass-module/dist/nm.min.css"
             ],
