--- a/nimbus-parent/pom.xml
+++ b/nimbus-parent/pom.xml
@@ -65,7 +65,8 @@
         <npm.version>5.5.1</npm.version>
         <frontend.plugin.version>1.6</frontend.plugin.version>
         <maven.karma.plugin.version>1.6</maven.karma.plugin.version>
-        <owasp-esapi.version>2.0.1</owasp-esapi.version>
+        <owasp-esapi.version>2.1.0</owasp-esapi.version>
+        <owasp-antisamy.version>1.5.7</owasp-antisamy.version>
         <nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
         <!-- nimbus-core -->
        	<parentDir>../nimbus-parent</parentDir>
@@ -305,6 +306,11 @@
                         <artifactId>xercesImpl</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+            	<groupId>org.owasp.antisamy</groupId>
+            	<artifactId>antisamy</artifactId>
+            	<version>${owasp-antisamy.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.antheminc.oss</groupId>
