--- a/nimbus-ui/nimbusui/angular.json
+++ b/nimbus-ui/nimbusui/angular.json
@@ -27,13 +27,13 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/nimbus-sass-module/dist/nm.min.css"
             ],
             "scripts": [
               "node_modules/chart.js/dist/Chart.js",
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/nimbus-sass-module/dist/main.js"
             ]
           },
