--- a/nimbus-ui/nimbusui/angular.json
+++ b/nimbus-ui/nimbusui/angular.json
@@ -34,6 +34,7 @@
               "node_modules/chart.js/dist/Chart.js",
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/nimbus-sass-module/dist/main.js"
             ]
           },
