--- a/nimbus-core/pom.xml
+++ b/nimbus-core/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>com.antheminc.oss</groupId>
 		<artifactId>nimbus-parent</artifactId>
-		<version>1.1.0.M3</version>
+		<version>1.1.0.M3-SNAPSHOT</version>
 		<relativePath>../nimbus-parent</relativePath>
 	</parent>
 	
-	<artifactId>nimbus-core</artifactId> 
+	<artifactId>nimbus-core</artifactId>
 	
     <properties>
         <!-- <sonar.projectName>nimbus-core</sonar.projectName> -->
