--- a/nimbus-core/pom.xml
+++ b/nimbus-core/pom.xml
@@ -11,6 +11,7 @@
 
 	<properties>
 		<sonar.jacoco.reportPaths>target/jacoco.exec, ../nimbus-test/target/jacoco.exec</sonar.jacoco.reportPaths>
+		<sonar.coverage.exclusions>src/main/java/com/antheminc/oss/nimbus/entity/**/*.java</sonar.coverage.exclusions>
 	</properties>
 
     <build>
