--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.antheminc.oss</groupId>
 	<artifactId>nimbus-parent</artifactId>
-	<version>1.1.0.M3</version>
+	<version>1.1.0</version>
 	<name>nimbus-parent</name>
 	<packaging>pom</packaging>
 
@@ -69,7 +69,7 @@
         <jacoco.maven.plugin.version>0.8.2</jacoco.maven.plugin.version>
         <!-- nimbus-core -->
         <parentDir>..</parentDir>
-        <nimbus.version>1.1.0.M3</nimbus.version>
+        <nimbus.version>1.1.0</nimbus.version>
         <nimbus.core.version>${nimbus.version}</nimbus.core.version>
         <nimbus.ui.version>${nimbus.version}</nimbus.ui.version>
         <nimbus.dsl.version>${nimbus.core.version}</nimbus.dsl.version> <!-- DSL matches core's version -->
