--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
         <nimbus.dsl.version>${nimbus.core.version}</nimbus.dsl.version> <!-- DSL matches core's version -->
         <nimbus.test.version>${nimbus.version}</nimbus.test.version>
         <nimbus.starter.version>${nimbus.version}</nimbus.starter.version>
+        
+        <!-- Manually Managed third party versions -->
+        <spring-security.version>4.2.4.RELEASE</spring-security.version>
+        <jackson.version>2.9.6</jackson.version>
+        <commons-fileupload.version>1.3.3</commons-fileupload.version>
+		<springdata.commons.version>1.13.12.RELEASE</springdata.commons.version>
+        <spring-web.version>4.3.18.RELEASE</spring-web.version>
     </properties>
 
     <repositories>
@@ -352,7 +359,70 @@
 			    <scope>runtime</scope>
 			    <version>${spring.boot.version}</version>
 			</dependency> -->
-        </dependencies>
+        
+				<!-- BEGIN Manually managing dependencies for Security Vulnerabilities -->
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${spring-security.version}</version><!--$NO-MVN-MAN-VER$ -->
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-core</artifactId>
+				<version>${spring-security.version}</version><!--$NO-MVN-MAN-VER$ -->
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${spring-security.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-web</artifactId>
+				<version>${spring-web.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>${spring-web.version}</version>
+			</dependency>
+			<dependency>
+	        	<groupId>org.apache.commons</groupId>
+    			<artifactId>commons-fileupload</artifactId>
+    			<version>${commons-fileupload.version}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>com.fasterxml.jackson.core</groupId>
+	            <artifactId>jackson-databind</artifactId>
+	            <version>${jackson.version}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>com.fasterxml.jackson.core</groupId>
+	            <artifactId>jackson-annotations</artifactId>
+	            <version>${jackson.version}</version>
+	        </dependency>
+			<dependency>
+				<groupId>org.bouncycastle</groupId>
+				<artifactId>bcpkix-jdk15on</artifactId>
+				<version>1.60</version>
+			</dependency>
+			<dependency>
+			    <groupId>com.google.guava</groupId>
+			    <artifactId>guava</artifactId>
+			    <version>25.0-jre</version>
+			</dependency>
+			<dependency>
+	            <groupId>org.springframework.data</groupId>
+	            <artifactId>spring-data-commons</artifactId>
+	            <version>${springdata.commons.version}</version>
+        	</dependency>
+	       <!--  <dependency>
+		         <groupId>com.fasterxml.jackson</groupId>
+	   			 <artifactId>jackson-parent</artifactId>
+	    		 <version>${jackson.version}</version>
+	    	</dependency>-->
+			<!-- END Manually managing dependencies for Security Vulnerabilities -->
+		</dependencies>
     </dependencyManagement>
 
     <dependencies>
@@ -484,11 +554,6 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<scope>test</scope>
-		</dependency>		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>	
 		        
