--- a/nimbus-starter/pom.xml
+++ b/nimbus-starter/pom.xml
@@ -5,7 +5,53 @@
 
 	<groupId>com.antheminc.oss</groupId>
 	<artifactId>nimbus-starter</artifactId>
-    <version>1.1.0</version>
+    	<version>1.1.0</version>
+	<url>http://www.oss.antheminc.com/</url>
+	<developers>
+		<developer>
+		    <id>soham.chakravarti</id>
+		    <!-- Replace with github id -->
+		    <name>Soham Chakravarti</name>
+		    <organization>Anthem Inc.</organization>
+		    <organizationUrl>https://www.anthem.com</organizationUrl>
+		    <roles>
+			<role>Lead Engineer</role>
+		    </roles>
+		</developer>
+		<developer>
+		    <id>jayant.chaudhuri</id>
+		    <!-- Replace with github id -->
+		    <name>Jayant Chaudhuri</name>
+		    <organization>Anthem Inc.</organization>
+		    <organizationUrl>https://www.anthem.com</organizationUrl>
+		    <roles>
+			<role>Engineer</role>
+		    </roles>
+		</developer>
+		<developer>
+		    <id>dinakar.meda</id>
+		    <!-- Replace with github id -->
+		    <name>Dinakar Meda</name>
+		    <organization>Anthem Inc.</organization>
+		    <organizationUrl>https://www.anthem.com</organizationUrl>
+		    <roles>
+			<role>Engineer</role>
+		    </roles>
+		</developer>
+    	</developers>
+
+	<licenses>
+		<license>
+		    <name>Apache License, Version 2.0</name>
+		    <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+		</license>
+	</licenses>
+
+	<scm>
+		<url>http://github.com/anthem-projects/nimbus-oss</url>
+		<connection>scm:git:git://github.com/openanthem/nimbus-core.git</connection>
+		<tag>nimbus-starter</tag>
+	</scm>
    
 	<name>nimbus-starter</name>
 	<description>framework starter project</description>
