--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <spring.boot.version>1.5.9.RELEASE</spring.boot.version>
+        <spring.boot.version>1.5.13.RELEASE</spring.boot.version>
         <spring.cloud.version>Dalston.RELEASE</spring.cloud.version>
         <swagger.version>2.4.0</swagger.version>
         <mongo>3.4</mongo>
@@ -77,11 +77,10 @@
         <nimbus.starter.version>${nimbus.version}</nimbus.starter.version>
         
         <!-- Manually Managed third party versions -->
-        <spring-security.version>4.2.4.RELEASE</spring-security.version>
         <jackson.version>2.9.6</jackson.version>
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
-		<springdata.commons.version>1.13.12.RELEASE</springdata.commons.version>
-        <spring-web.version>4.3.18.RELEASE</spring-web.version>
+		<spring-web.version>4.3.18.RELEASE</spring-web.version>
+		<commons-email.version>1.5</commons-email.version>
     </properties>
 
     <repositories>
@@ -319,6 +318,10 @@
                         <groupId>xerces</groupId>
                         <artifactId>xercesImpl</artifactId>
                     </exclusion>
+                    <exclusion>
+                    	<groupId>org.apache.commons</groupId>
+    					<artifactId>commons-fileupload</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
@@ -360,22 +363,7 @@
 			    <version>${spring.boot.version}</version>
 			</dependency> -->
         
-				<!-- BEGIN Manually managing dependencies for Security Vulnerabilities -->
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-config</artifactId>
-				<version>${spring-security.version}</version><!--$NO-MVN-MAN-VER$ -->
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-core</artifactId>
-				<version>${spring-security.version}</version><!--$NO-MVN-MAN-VER$ -->
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-web</artifactId>
-				<version>${spring-security.version}</version>
-			</dependency>
+			<!-- BEGIN Manually managing dependencies for Security Vulnerabilities -->
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-web</artifactId>
@@ -390,6 +378,11 @@
 	        	<groupId>org.apache.commons</groupId>
     			<artifactId>commons-fileupload</artifactId>
     			<version>${commons-fileupload.version}</version>
+	        </dependency>
+	        <dependency>
+	        	<groupId>org.apache.commons</groupId>
+    			<artifactId>commons-email</artifactId>
+    			<version>${commons-email.version}</version>
 	        </dependency>
 	        <dependency>
 	            <groupId>com.fasterxml.jackson.core</groupId>
@@ -411,16 +404,6 @@
 			    <artifactId>guava</artifactId>
 			    <version>25.0-jre</version>
 			</dependency>
-			<dependency>
-	            <groupId>org.springframework.data</groupId>
-	            <artifactId>spring-data-commons</artifactId>
-	            <version>${springdata.commons.version}</version>
-        	</dependency>
-	       <!--  <dependency>
-		         <groupId>com.fasterxml.jackson</groupId>
-	   			 <artifactId>jackson-parent</artifactId>
-	    		 <version>${jackson.version}</version>
-	    	</dependency>-->
 			<!-- END Manually managing dependencies for Security Vulnerabilities -->
 		</dependencies>
     </dependencyManagement>
@@ -486,10 +469,6 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-commons</artifactId>
         </dependency>
         <dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -570,10 +549,6 @@
             <groupId>ch.mfrey.jackson</groupId>
             <artifactId>jackson-antpathfilter</artifactId>
             <version>1.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
         </dependency>
 		<dependency>
 			<groupId>org.owasp.esapi</groupId>
