--- a/nimbus-starter/pom.xml
+++ b/nimbus-starter/pom.xml
@@ -83,5 +83,29 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<profiles>
+	<profile>
+            <id>cicdbuild</id>
+            <build>
+                <plugins>
+                	
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        </profiles>
 
 </project>
