--- a/pom.xml
+++ b/pom.xml
@@ -404,6 +404,17 @@
 			    <artifactId>guava</artifactId>
 			    <version>25.0-jre</version>
 			</dependency>
+			<!-- ESAPI internally managaed dependency versions-->
+			<dependency>
+			    <groupId>org.apache.xmlgraphics</groupId>
+  				<artifactId>batik-css</artifactId>
+			    <version>1.9.1</version>
+			</dependency>
+			<dependency>
+			    <groupId>xalan</groupId>
+  				<artifactId>xalan</artifactId>
+  				<version>2.7.2</version>
+			</dependency>
 			<!-- END Manually managing dependencies for Security Vulnerabilities -->
 		</dependencies>
     </dependencyManagement>
