--- a/nimbus-core/pom.xml
+++ b/nimbus-core/pom.xml
@@ -14,6 +14,13 @@
 		<sonar.coverage.exclusions>src/main/java/com/antheminc/oss/nimbus/entity/**/*.java</sonar.coverage.exclusions>
 	</properties>
 
+	<dependencies>
+		<dependency>
+	        <groupId>com.fasterxml.jackson.datatype</groupId>
+	        <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+	</dependencies>
+	
     <build>
 	     <plugins>
 			<plugin>
