--- a/nimbus-starter/pom.xml
+++ b/nimbus-starter/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.antheminc.oss</groupId>
 	<artifactId>nimbus-starter</artifactId>
-    <version>1.1.9</version>
+    <version>1.1.9-1</version>
 	<url>http://www.oss.antheminc.com/</url>
 	<developers>
 		<developer>
@@ -57,7 +57,7 @@
 	<description>framework starter project</description>
 
 	<properties>
-		<nimbus.version>1.1.9</nimbus.version>
+		<nimbus.version>1.1.9-1</nimbus.version>
 	</properties>
 
 	<dependencies>	
